--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3005",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "next": "10.0.7",
+    "prismjs": "^1.24.1",
     "react": "17.0.1",
-    "react-chatbot-kit": "^1.1.20",
     "react-dom": "17.0.1",
-    "react-simple-chatbot": "^0.6.1",
-    "styled-components": "^5.2.1",
-    "swiper": "^6.4.15",
     "typewriter-effect": "^2.17.0"
+  },
+  "devDependencies": {
+    "@types/node": "^16.0.1",
+    "@types/prismjs": "^1.16.6",
+    "@types/react": "^17.0.14",
+    "typescript": "^4.3.5"
   }
 }
