--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.7",
+    "next": "^12.0.4",
+    "nextjs": "^0.0.3",
     "prismjs": "^1.24.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-jsx": "^4.0.1",
     "typewriter-effect": "^2.17.0"
   },
   "devDependencies": {
